assets/css/main.css
/* ... */
		@media screen and (max-width: 480px) {

			#main .thumb {
				-moz-transition-delay: 1.175s;
				-webkit-transition-delay: 1.175s;
				-ms-transition-delay: 1.175s;
				transition-delay: 1.175s;
				height: calc(40vh - 2em);
				min-height: 18em;
				width: 100%;
			}

				#main .thumb:nth-child(1) {
					-moz-transition-delay: 0.65s;
					-webkit-transition-delay: 0.65s;
					-ms-transition-delay: 0.65s;
					transition-delay: 0.65s;
				}

				#main .thumb:nth-child(2) {
					-moz-transition-delay: 0.8s;
					-webkit-transition-delay: 0.8s;
					-ms-transition-delay: 0.8s;
					transition-delay: 0.8s;
				}

				#main .thumb:nth-child(3) {
					-moz-transition-delay: 0.95s;
					-webkit-transition-delay: 0.95s;
					-ms-transition-delay: 0.95s;
					transition-delay: 0.95s;
				}

		}

/* Gallery Group - Expand/Collapse */

	/* Collapsed state - gallery group wraps around the thumbnail */
	#main .gallery-group {
		display: flex;
		flex-wrap: wrap;
		width: 25%;
		position: relative;
	}

	@media screen and (max-width: 1680px) {
		#main .gallery-group {
			width: 33.33333%;
		}
	}

	@media screen and (max-width: 1280px) {
		#main .gallery-group {
			width: 50%;
		}
	}

	@media screen and (max-width: 480px) {
		#main .gallery-group {
			width: 100%;
		}
	}

	/* Category thumbnail - fill the gallery group container */
	#main .gallery-group > .thumb {
		cursor: pointer;
		width: 100%;
	}

	/* Expand indicator on category covers */
	#main .gallery-group > .thumb::before {
		content: '\f065';
		font-family: 'Font Awesome 5 Free';
		font-weight: 900;
		position: absolute;
		top: 1em;
		right: 1em;
		color: rgba(255, 255, 255, 0.7);
		font-size: 1.2em;
		z-index: 2;
		transition: color 0.2s ease, transform 0.2s ease;
	}

	#main .gallery-group > .thumb:hover::before {
		color: #ffffff;
		transform: scale(1.1);
	}

	/* Hide expand indicator when expanded */
	#main .gallery-group.expanded > .thumb::before {
		display: none;
	}

	/* Expand overlay - covers the thumbnail when collapsed */
	#main .gallery-group > .thumb .expand-overlay {
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		z-index: 3;
		cursor: pointer;
	}

	/* Hide overlay when expanded - allows clicking through to image */
	#main .gallery-group.expanded > .thumb .expand-overlay {
		display: none;
	}

	/* Back button - hidden by default */
	#main .gallery-group .gallery-back {
		display: none;
		position: absolute;
		top: 1em;
		left: 1em;
		background: rgba(31, 34, 36, 0.9);
		color: #ffffff;
		border: none;
		padding: 0.75em 1.5em;
		font-size: 0.9em;
		cursor: pointer;
		z-index: 10;
		transition: background 0.2s ease;
		text-transform: uppercase;
		letter-spacing: 0.1em;
	}

	#main .gallery-group .gallery-back:hover {
		background: #34a58e;
	}

	#main .gallery-group .gallery-back::before {
		content: '\f053';
		font-family: 'Font Awesome 5 Free';
		font-weight: 900;
		margin-right: 0.5em;
	}

	/* Gallery items - hidden by default */
	#main .gallery-group .gallery-item {
		display: none;
	}

	/* EXPANDED STATE */
	#main .gallery-group.expanded {
		position: fixed;
		top: 0;
		left: 0;
		right: 0;
		bottom: 4em;
		width: 100%;
		z-index: 10000;
		background: #242629;
		overflow-y: auto;
		padding: 4em 0;
		align-content: flex-start;
	}

	/* Thumb in expanded view - same size as gallery items */
	#main .gallery-group.expanded > .thumb {
		height: calc(40vh - 2em);
		min-height: 20em;
		width: 25%;
	}

	@media screen and (max-width: 1680px) {
		#main .gallery-group.expanded > .thumb {
			width: 33.33333%;
		}
	}

	@media screen and (max-width: 1280px) {
		#main .gallery-group.expanded > .thumb {
			width: 50%;
		}
	}

	@media screen and (max-width: 480px) {
		#main .gallery-group.expanded > .thumb {
			width: 100%;
		}
	}

	@media screen and (max-width: 736px) {
		#main .gallery-group.expanded {
			top: 4em;
			bottom: 0;
			padding: 3.5em 0 0 0;
		}
	}

	/* Show back button when expanded */
	#main .gallery-group.expanded .gallery-back {
		display: block;
		position: fixed;
		top: auto;
		bottom: 5em;
		left: 50%;
		transform: translateX(-50%);
	}

	@media screen and (max-width: 736px) {
		#main .gallery-group.expanded .gallery-back {
			top: 4.5em;
			bottom: auto;
			left: 1em;
			transform: none;
		}
	}

	/* Show gallery items as thumbnails when expanded */
	#main .gallery-group.expanded .gallery-item {
		display: block;
		height: calc(40vh - 2em);
		min-height: 20em;
		width: 25%;
		background-size: cover;
		background-position: center;
		background-repeat: no-repeat;
		position: relative;
		cursor: pointer;
		transition: opacity 0.3s ease;
	}

	#main .gallery-group.expanded .gallery-item:hover {
		opacity: 0.8;
	}

	/* Gradient overlay on gallery items */
	#main .gallery-group.expanded .gallery-item::after {
		background-image: linear-gradient(to top, rgba(10,17,25,0.35) 5%, rgba(10,17,25,0) 35%);
		content: '';
		display: block;
		height: 100%;
		left: 0;
		position: absolute;
		top: 0;
		width: 100%;
		pointer-events: none;
	}

	/* Responsive gallery items */
	@media screen and (max-width: 1680px) {
		#main .gallery-group.expanded .gallery-item {
			width: 33.33333%;
		}
	}

	@media screen and (max-width: 1280px) {
		#main .gallery-group.expanded .gallery-item {
			width: 50%;
		}
	}

	@media screen and (max-width: 480px) {
		#main .gallery-group.expanded .gallery-item {
			width: 100%;
		}
	}

	/* Hide other gallery groups when one is expanded */
	body.gallery-expanded #main .gallery-group:not(.expanded) {
		display: none;
	}

/* Footer */

	#footer .copyright {
		color: #505051;
		font-size: 0.9em;
	}

		#footer .copyright a {
			color: inherit;
		}

